RESOLVED FIXED 164787
Web Inspector: inspector/worker/debugger-pause.html fails on WebKit1
https://bugs.webkit.org/show_bug.cgi?id=164787
Summary Web Inspector: inspector/worker/debugger-pause.html fails on WebKit1
Joseph Pecoraro
Reported 2016-11-15 13:33:48 PST
Summary: inspector/worker/debugger-pause.html fails on WebKit1 Steps to Reproduce: 1. shell> run-webkit-tests --release --iterations=10 --v --exit-after-n-failures=1 -1 => Failure Notes: - It seems the test is not actually pausing the Main Thread because of the nature of WebKit 1. Adding 2 setTimeouts to jump to the page + pause, and jump back to the inspector solves this.
Attachments
[PATCH] Proposed Fix (9.05 KB, patch)
2016-11-15 13:35 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2016-11-15 13:35:55 PST
Created attachment 294872 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 2 2016-11-15 14:12:54 PST
Comment on attachment 294872 [details] [PATCH] Proposed Fix Clearing flags on attachment: 294872 Committed r208755: <http://trac.webkit.org/changeset/208755>
WebKit Commit Bot
Comment 3 2016-11-15 14:12:58 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.